Lesson 14: create gists. add dotenv-rails gem. move ACCESS_TOKEN to .env file

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -51,6 +51,9 @@ ru:
   test_passages:
     result:
       header: "Тест %{title} успешно завершен"
+    gist:
+      success: "Gist успешно сохранен!"
+      failure: "Во время сохранения gist произошла ошибка"
 
   admin:
     tests:
