Lesson 14: add Octokit client. add links to gist flash messages

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -49,7 +49,7 @@ en:
     result:
       header: "The %{title} Test was Completed!"
     gist:
-      success: "Gist was successfully created!"
+      success: "%{gist_link} was successfully created!"
       failure: "An error occurred while saving gist"
 
   admin:
