--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -52,7 +52,7 @@ ru:
     result:
       header: "Тест %{title} успешно завершен"
     gist:
-      success: "Gist успешно сохранен!"
+      success: "%{gist_link} успешно сохранен!"
       failure: "Во время сохранения gist произошла ошибка"
 
   admin:
