Lesson 14: create Gist model. show all gists to admin

--- a/config/locales/activerecord.en.yml
+++ b/config/locales/activerecord.en.yml
@@ -4,6 +4,9 @@ en:
       test: "Test"
 
     attributes:
+      gist:
+        question: "Question"
+        user: "User"
       test:
         title: "Title"
         level: "Level"
