--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -56,6 +56,11 @@ ru:
       failure: "Во время сохранения gist произошла ошибка"
 
   admin:
+    test_passages:
+      gists:
+        header: "Созданные gist"
+        action: "Действия"
+
     tests:
       index:
         header: "Доступные тесты"
@@ -76,3 +81,7 @@ ru:
   test_mailer:
     completed_test:
       subject: "Вы успешно завершили тест на TestGuru!"
+
+  gist_question_service:
+    gist_params:
+      description: "Вопрос о %{title} от TestGuru"
