--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -53,6 +53,11 @@ en:
       failure: "An error occurred while saving gist"
 
   admin:
+    test_passages:
+      gists:
+        header: "Created gists"
+        action: "Action"
+
     tests:
       index:
         header: "Tricky Tests"
@@ -74,4 +79,6 @@ en:
     completed_test:
       subject: "You just completed TestGuru test!"
 
-
+  gist_question_service:
+    gist_params:
+      description: "A question about %{title} from TestGuru"
