Lesson 17: add feedback resource and mailer

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -45,6 +45,11 @@ en:
     test:
       start_button: "Start test"
 
+  feedbacks:
+    new:
+      header: "Feedback"
+      submit: "Send"
+
   test_passages:
     result:
       header: "The %{title} Test was Completed!"
